# SVG-Reader

./: .gitignore  CMakeLists.txt  README.md  download-links.txt
parsers/: ColorUtils.cpp  ColorUtils.h  SVG-Parsers.cpp  SVG-Parsers.h  XML-ParsersWrapper.cpp  XML-ParsersWrapper.h
renderer/: IRenderer.h  SFMLRenderer.cpp  SFMLRenderer.h  SVGRenderer.cpp  SVGRenderer.h
src/: main.cpp
src/elements/: Transform.cpp  Transform.h  elements.cpp  elements.h
